syntax = "proto3";

package live;

option go_package = "danmu-core/api";

// LiveService 定义抖音直播管理服务
service LiveService {
  // AddTask 添加直播任务
  rpc AddTask(LiveConf) returns (Response) {}
  // DeleteTask 删除直播任务
  rpc DeleteTask(TaskID) returns (Response) {}
  // UpdateTask 更新直播任务
  rpc UpdateTask(LiveConf) returns (Response) {}
}

// LiveConf 直播配置信息
message LiveConf {
  int64 id = 1;            // 任务ID
  string url = 2;          // 直播URL
  string room_display_id = 3;  // 房间显示ID
  string name = 4;         // 房间名称
  bool enable = 5;         // 是否启用
}

// TaskID 任务ID请求
message TaskID {
  int64 id = 1;           // 任务ID
}

// Response 通用响应
message Response {
  int32 code = 1;         // 响应代码
  string message = 2;     // 响应消息
}